# pymultitaper

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
doc_site/: 404.html  index.html
docs/: 404.html  index.html  index.md  objects.inv  sitemap.xml
docs/api/: index.html
examples/: test.py
mkdocs_docs/: api.md  index.md
src/pymultitaper/: __init__.py  spectral.py
