[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymultitaper"
version = "1.0.1"
authors = [
  { name="Chao Kong", email="kongchao1998@gmail.com" },
]
description = "Fast easy-to-use multitaper spectrogram and spectrum calculation with Python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]